--- a/NetworkConfiguration.json
+++ b/NetworkConfiguration.json
@@ -8,6 +8,14 @@
 	  "numberOfRequests": 30,
       "capacity": 10,
       "pql": 8
+    },
+    {
+	"name": "category 2",
+      "numberOfQuota": 3,
+      "numberOfInitialTokens": 100,
+	  "numberOfRequests": 30,
+      "capacity": 10,
+      "pql": 8
     }
   ]
 }
