Notifier Pattern + unit tests

--- a/NetworkConfiguration(2x12)+(2x13).json
+++ b/NetworkConfiguration(2x12)+(2x13).json
@@ -24,6 +24,14 @@
 	  "numberOfRequests": 30,
       "capacity": 10,
       "pql": 8
+    },
+    {
+	"name": "category 4",
+      "numberOfQuota": 4,
+      "numberOfInitialTokens": 100,
+	  "numberOfRequests": 30,
+      "capacity": 10,
+      "pql": 8
     }
   ]
 }
