--- a/NetworkConfiguration(3Committees).json
+++ b/NetworkConfiguration(3Committees).json
@@ -7,7 +7,9 @@
       "numberOfInitialTokens": 100,
       "numberOfRequests": 1,
       "capacity": 100,
-      "pql": 100
+      "pql": 100,
+      "maxDataSize": 10,
+      "numberOfClients": 3
     },
     {
 	"name": "category 2",
@@ -15,7 +17,9 @@
       "numberOfInitialTokens": 100,
       "numberOfRequests": 1,
       "capacity": 100,
-      "pql": 100
+      "pql": 100,
+      "maxDataSize": 20,
+      "numberOfClients": 3
     },
     {
 	"name": "category 3",
@@ -23,7 +27,9 @@
       "numberOfInitialTokens": 100,
       "numberOfRequests": 1,
       "capacity": 100,
-      "pql": 100
+      "pql": 100,
+      "maxDataSize": 30,
+      "numberOfClients": 3
     }
   ]
 }
