--- a/app/pom.xml
+++ b/app/pom.xml
@@ -17,6 +17,11 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>me.tongfei</groupId>
+            <artifactId>progressbar</artifactId>
+            <version>0.9.3</version>
+        </dependency>
+        <dependency>
             <artifactId>core</artifactId>
             <groupId>come.engie.csai.pc</groupId>
             <version>1.0-SNAPSHOT</version>
