--- a/core/pom.xml
+++ b/core/pom.xml
@@ -16,4 +16,17 @@
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.barfuin.texttree</groupId>
+            <artifactId>text-tree</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>me.tongfei</groupId>
+            <artifactId>progressbar</artifactId>
+            <version>0.9.3</version>
+        </dependency>
+    </dependencies>
+
 </project>
