--- a/NetworkConfiguration(10Committees).json
+++ b/NetworkConfiguration(10Committees).json
@@ -5,81 +5,101 @@
       "name": "category 1",
       "numberOfQuota": 3,
       "numberOfInitialTokens": 100,
-      "numberOfRequests": 1,
+      "numberOfRequests": 100,
       "capacity": 100,
-      "pql": 100
+      "pql": 5000,
+      "maxDataSize": 100,
+      "numberOfClients": 3
     },
     {
       "name": "category 2",
       "numberOfQuota": 3,
       "numberOfInitialTokens": 100,
-      "numberOfRequests": 1,
+      "numberOfRequests": 100,
       "capacity": 100,
-      "pql": 100
+      "pql": 5000,
+      "maxDataSize": 100,
+      "numberOfClients": 3
     },
     {
       "name": "category 3",
       "numberOfQuota": 3,
       "numberOfInitialTokens": 100,
-      "numberOfRequests": 1,
+      "numberOfRequests": 100,
       "capacity": 100,
-      "pql": 100
+      "pql": 5000,
+      "maxDataSize": 100,
+      "numberOfClients": 3
     },
     {
       "name": "category 4",
       "numberOfQuota": 3,
       "numberOfInitialTokens": 100,
-      "numberOfRequests": 1,
+      "numberOfRequests": 100,
       "capacity": 100,
-      "pql": 100
+      "pql": 5000,
+      "maxDataSize": 100,
+      "numberOfClients": 3
     },
     {
       "name": "category 5",
       "numberOfQuota": 3,
       "numberOfInitialTokens": 100,
-      "numberOfRequests": 1,
+      "numberOfRequests": 100,
       "capacity": 100,
-      "pql": 100
+      "pql": 5000,
+      "maxDataSize": 100,
+      "numberOfClients": 3
     },
     {
       "name": "category 6",
       "numberOfQuota": 3,
       "numberOfInitialTokens": 100,
-      "numberOfRequests": 1,
+      "numberOfRequests": 100,
       "capacity": 100,
-      "pql": 100
+      "pql": 5000,
+      "maxDataSize": 100,
+      "numberOfClients": 3
     },
     {
       "name": "category 7",
       "numberOfQuota": 3,
       "numberOfInitialTokens": 100,
-      "numberOfRequests": 1,
+      "numberOfRequests": 100,
       "capacity": 100,
-      "pql": 100
+      "pql": 5000,
+      "maxDataSize": 100,
+      "numberOfClients": 3
     },
     {
       "name": "category 8",
       "numberOfQuota": 3,
       "numberOfInitialTokens": 100,
-      "numberOfRequests": 1,
+      "numberOfRequests": 100,
       "capacity": 100,
-      "pql": 100
+      "pql": 5000,
+      "maxDataSize": 100,
+      "numberOfClients": 3
     },
     {
       "name": "category 9",
       "numberOfQuota": 3,
       "numberOfInitialTokens": 100,
-      "numberOfRequests": 1,
+      "numberOfRequests": 100,
       "capacity": 100,
-      "pql": 100
+      "pql": 5000,
+      "maxDataSize": 100,
+      "numberOfClients": 3
     },
     {
       "name": "category 10",
       "numberOfQuota": 3,
       "numberOfInitialTokens": 100,
-      "numberOfRequests": 1,
+      "numberOfRequests": 100,
       "capacity": 100,
-      "pql": 100
+      "pql": 5000,
+      "maxDataSize": 100,
+      "numberOfClients": 3
     }
   ]
 }
