--- a/NetworkConfiguration(2Committees).json
+++ b/NetworkConfiguration(2Committees).json
@@ -5,21 +5,23 @@
       "name": "category 1",
       "numberOfQuota": 3,
       "numberOfInitialTokens": 100,
-      "numberOfRequests": 100,
+      "numberOfRequests": 1000,
       "capacity": 100,
       "pql": 1000,
       "maxDataSize": 100,
-      "numberOfClients": 3
+      "numberOfClients": 3,
+      "numberOfReplicas": 5
     },
     {
-      "name": "category 2",
+      "name": "category 1",
       "numberOfQuota": 3,
       "numberOfInitialTokens": 100,
-      "numberOfRequests": 100,
+      "numberOfRequests": 1000,
       "capacity": 100,
       "pql": 1000,
       "maxDataSize": 20,
-      "numberOfClients": 3
+      "numberOfClients": 3,
+      "numberOfReplicas": 5
     }
   ]
 }
